// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace Create workspace button Hide if the user has a USER_PROFILE "USER" 1`] = `
<layout-with-header-stub chapters="" groupid="0">
  <div class="generic-view-container p-mx-auto">
    <h1 class="p-my-4 lck-color-title">
      pages.workspace.title
    </h1>
    <div class="p-grid">
      <!---->
      <!---->
      <div class="p-col-12 p-md-4 p-lg-3 workspaces-item">
        <div class="workspaces-button p-mr-2" style="background-color: inherit;">
          <router-link-stub to="/workspace/0" tag="a" ariacurrentvalue="page" event="click" class="workspaces-detail">
            <p class="workspaces-detail-title">workspace-title</p>
          </router-link-stub>
          <!---->
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <lck-dialog-stub header="pages.workspace.form.create" basezindex="0" closable="true" closeonescape="true" modal="true">
      <lck-workspace-form-stub></lck-workspace-form-stub>
    </lck-dialog-stub>
  </div>
</layout-with-header-stub>
`;

exports[`Workspace Create workspace button Show if the user is a USER_PROFILE "ADMIN" 1`] = `
<layout-with-header-stub chapters="" groupid="0">
  <div class="generic-view-container p-mx-auto">
    <h1 class="p-my-4 lck-color-title">
      pages.workspace.title
    </h1>
    <div class="p-grid">
      <!---->
      <!---->
      <div class="p-col-12 p-md-4 p-lg-3 workspaces-item">
        <div class="workspaces-button p-mr-2" style="background-color: inherit;">
          <router-link-stub to="/workspace/0" tag="a" ariacurrentvalue="page" event="click" class="workspaces-detail">
            <p class="workspaces-detail-title">workspace-title</p>
          </router-link-stub>
          <!---->
          <!---->
        </div>
      </div>
      <div class="p-col-12 p-md-4 p-lg-3 workspaces-item"><button class="workspaces-new"><i class="bi bi-file-plus workspaces-new-icon"></i>
          <p class="p-button p-button-sm">pages.workspace.form.new</p>
        </button></div>
    </div>
    <lck-dialog-stub header="pages.workspace.form.create" basezindex="0" closable="true" closeonescape="true" modal="true">
      <lck-workspace-form-stub></lck-workspace-form-stub>
    </lck-dialog-stub>
  </div>
</layout-with-header-stub>
`;

exports[`Workspace Create workspace button Show if the user is a USER_PROFILE "CREATOR" 1`] = `
<layout-with-header-stub chapters="" groupid="0">
  <div class="generic-view-container p-mx-auto">
    <h1 class="p-my-4 lck-color-title">
      pages.workspace.title
    </h1>
    <div class="p-grid">
      <!---->
      <!---->
      <div class="p-col-12 p-md-4 p-lg-3 workspaces-item">
        <div class="workspaces-button p-mr-2" style="background-color: inherit;">
          <router-link-stub to="/workspace/0" tag="a" ariacurrentvalue="page" event="click" class="workspaces-detail">
            <p class="workspaces-detail-title">workspace-title</p>
          </router-link-stub>
          <!---->
          <!---->
        </div>
      </div>
      <div class="p-col-12 p-md-4 p-lg-3 workspaces-item"><button class="workspaces-new"><i class="bi bi-file-plus workspaces-new-icon"></i>
          <p class="p-button p-button-sm">pages.workspace.form.new</p>
        </button></div>
    </div>
    <lck-dialog-stub header="pages.workspace.form.create" basezindex="0" closable="true" closeonescape="true" modal="true">
      <lck-workspace-form-stub></lck-workspace-form-stub>
    </lck-dialog-stub>
  </div>
</layout-with-header-stub>
`;

exports[`Workspace Create workspace button Show if the user is a USER_PROFILE "SUPERADMIN" 1`] = `
<layout-with-header-stub chapters="" groupid="0">
  <div class="generic-view-container p-mx-auto">
    <h1 class="p-my-4 lck-color-title">
      pages.workspace.title
    </h1>
    <div class="p-grid">
      <!---->
      <!---->
      <div class="p-col-12 p-md-4 p-lg-3 workspaces-item">
        <div class="workspaces-button p-mr-2" style="background-color: inherit;">
          <router-link-stub to="/workspace/0" tag="a" ariacurrentvalue="page" event="click" class="workspaces-detail">
            <p class="workspaces-detail-title">workspace-title</p>
          </router-link-stub>
          <!---->
          <!---->
        </div>
      </div>
      <div class="p-col-12 p-md-4 p-lg-3 workspaces-item"><button class="workspaces-new"><i class="bi bi-file-plus workspaces-new-icon"></i>
          <p class="p-button p-button-sm">pages.workspace.form.new</p>
        </button></div>
    </div>
    <lck-dialog-stub header="pages.workspace.form.create" basezindex="0" closable="true" closeonescape="true" modal="true">
      <lck-workspace-form-stub></lck-workspace-form-stub>
    </lck-dialog-stub>
  </div>
</layout-with-header-stub>
`;
